Name:           mbox-tools
Cabal-Version:  >=1.2
Version:        0.1
License:        BSD3
License-File:   LICENSE
Copyright:      (c) Nicolas Pouillard
Author:         Nicolas Pouillard
Maintainer:     Nicolas Pouillard <nicolas.pouillard@gmail.com>
{-
Category:       ...
Synopsis:       ...
Description:    ...
Homepage:       ...
-}
Stability:      Experimental
Build-Type:     Simple

flag use_hutt
  Default: False

Library
    Build-depends: base>=3.0, containers>=0.1, bytestring>=0.9, parsec>=3.0.0,
                   mtl>=1.1.0.1, hsemail>=1.4, mime>=0.2.1, data-accessor>=0.1.4
                   -- hsemail-1.4, mime-0.2.1, hutt-0.1 are not yet released
    Exposed-Modules: Mbox, Mbox.ByteString.Lazy, Email, EOL
    Other-Modules:
    ghc-options: -Wall

executable mbox-counting
    main-is: mbox-counting.hs
    ghc-options: -Wall
executable mbox-average-size
    main-is: mbox-average-size.hs
    ghc-options: -Wall
executable mbox-quoting
    main-is: mbox-quoting.hs
    ghc-options: -Wall
executable redact-mbox
    main-is: redact-mbox.hs
    Build-depends: random
    ghc-options: -Wall
executable mbox-list
    main-is: mbox-list.hs
    ghc-options: -Wall
executable mbox-grep
    main-is: mbox-grep.hs
    ghc-options: -Wall
  if flag(use_hutt)
    build-depends: hutt>=0.1
  else
    buildable: False
