Name:           mbox-tools
Cabal-Version:  >=1.2
Version:        0.1
License:        BSD3
License-File:   LICENSE
Copyright:      (c) Nicolas Pouillard
Author:         Nicolas Pouillard
Maintainer:     Nicolas Pouillard <nicolas.pouillard@gmail.com>
{-
Category:       ...
Synopsis:       ...
Description:    ...
Homepage:       ...
-}
Stability:      Experimental
Build-Type:     Simple

flag use_hutt
  Default: False
  -- hutt-0.1 is not released

flag use_hsemail
  Default: False
  -- hsemail-1.3.1 is not released

Library
    Build-depends: base>=3.0, containers>=0.1, bytestring>=0.9, parsec>=2.1,
                   mtl>=1.1.0.1, mime>=0.2.1, data-accessor>=0.1.4
                   -- mime-0.2.1 is not yet released

    Exposed-Modules: Mbox, EOL
    Other-Modules:
    ghc-options: -Wall
  if flag(use_hsemail)
    build-depends: hsemail>=1.3.1
    Exposed-Modules: Email

executable mbox-counting
    main-is: mbox-counting.hs
    ghc-options: -Wall
executable mbox-average-size
    main-is: mbox-average-size.hs
    ghc-options: -Wall
executable mbox-quoting
    main-is: mbox-quoting.hs
    ghc-options: -Wall
executable redact-mbox
    main-is: redact-mbox.hs
    Build-depends: random
    ghc-options: -Wall
executable mbox-list
    main-is: mbox-list.hs
    ghc-options: -Wall
  if flag(use_hsemail)
    build-depends: hsemail>=1.3.1
  else
    buildable: False
executable mbox-grep
    main-is: mbox-grep.hs
    ghc-options: -Wall
  if flag(use_hutt) && flag(use_hsemail)
    build-depends: hutt>=0.1, hsemail>=1.3.1
  else
    buildable: False
executable split-mbox
    main-is: split-mbox.hs
    ghc-options: -Wall
