Name:           mbox-tools
Cabal-Version:  >=1.2
Version:        0.1
License:        BSD3
License-File:   LICENSE
Copyright:      (c) Nicolas Pouillard
Author:         Nicolas Pouillard
Maintainer:     Nicolas Pouillard <nicolas.pouillard@gmail.com>
Category:       ...
Synopsis:       ...
Description:    ...
Homepage:       ...
Stability:      Experimental
Build-Type:     Simple

flag use_hutt
  Default: False
  -- hutt-0.1 is not released

flag useless
  Default: False

Library
    Build-depends: base(>=3 && <5), containers>=0.1, bytestring>=0.9, parsec>=2.1 && <3.0,
                   transformers, monads-fd, fclabels>=0.4.1, pureMD5,
                   mbox>=0.1, hsemail>=1.3.1, mime>=0.3.1
    exposed-modules: MboxTools
-- hsemail-1.3.1 is not released
-- mime-0.3.1 is not yet released

executable mbox-counting
    main-is: mbox-counting.hs
    ghc-options: -Wall
executable mbox-average-size
    main-is: mbox-average-size.hs
    ghc-options: -Wall
  if !flag(useless)
    buildable: False
executable mbox-quoting
    main-is: mbox-quoting.hs
    ghc-options: -Wall
  if !flag(useless)
    buildable: False
executable redact-mbox
    main-is: redact-mbox.hs
    Build-depends: random
    ghc-options: -Wall
  if !flag(useless)
    buildable: False
executable mbox-list
    main-is: mbox-list.hs
    ghc-options: -Wall
executable mbox-pick
    main-is: mbox-pick.hs
    ghc-options: -Wall
executable mbox-partition
    main-is: mbox-partition.hs
    ghc-options: -Wall
executable mbox-grep
    main-is: mbox-grep.hs
    ghc-options: -Wall
  if flag(use_hutt)
    build-depends: hutt>=0.1
  else
    buildable: False
executable split-mbox
    main-is: split-mbox.hs
    ghc-options: -Wall
executable mbox-iter
    main-is: mbox-iter.hs
    ghc-options: -Wall
    build-depends: process
